@@ -113,6 +113,7 @@ typedef struct OptionsContext {
     uint64_t limit_filesize;
     float mux_preload;
     float mux_max_delay;
+    int shortest;
 
     int video_disable;
     int audio_disable;
@@ -303,6 +304,8 @@ typedef struct OutputFile {
     int64_t recording_time; /* desired length of the resulting file in microseconds */
     int64_t start_time;     /* start time in microseconds */
     uint64_t limit_filesize;
+
+    int shortest;
 } OutputFile;
 
 extern InputStream **input_streams;
@@ -333,7 +336,6 @@ extern int do_hex_dump;
 extern int do_pkt_dump;
 extern int copy_ts;
 extern int copy_tb;
-extern int opt_shortest;
 extern int exit_on_error;
 extern int print_stats;
 extern int qp_hist;
